@@ -12,6 +12,7 @@ polygon.orientation(test_is_simple=False)   # return -1|+1, for simple polygons
 point in polygon   # return bool, using winding number
 polygon.is_simple()   # return bool (slow)
 polygon.is_convex(test_is_simple=False)   # return bool, for simple polygons
+polygon.iterpoints()
 polygon.itersegments()
 ----------------------------------------------------------------------
 EOF
