@@ -17,6 +17,7 @@ r1 == r2, r1 != r2, r1 < r2, r1 <= r2, r1 > r2, r1 >= r2
 point in rectangle   # return bool
 segment in rectangle   # return bool
 rectangle.is_square()   # return bool
+rectangle.iterpoints()   # counterclockwise
 rectangle.itersegments()   # segment.pt1 < segment.pt2
 rectangle.itersegments_oriented()   # the face is on the right
 rectangle.gnu()   # return gnuplot string
